[package]
license = "AGPL-3.0"
authors = ["poly000"]
name = "choyen_5000"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/poly000/5000choyen"
description = "wrapper for python 5000choyen generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.17.1"
features = ["auto-initialize"]
